--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ links = "tauri-plugin-aliyun-push"
 [dependencies]
 tauri = { version = "2.7.0" }
 serde = "1.0"
+serde_json = "1.0"
 thiserror = "2"
 
 [build-dependencies]
