--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tauri-plugin-aliyun-push-api",
   "version": "0.1.0",
   "author": "You",
-  "description": "",
+  "description": "Tauri plugin for Aliyun Push SDK integration on Android",
   "type": "module",
   "types": "./dist-js/index.d.ts",
   "main": "./dist-js/index.cjs",
@@ -29,5 +29,6 @@
     "rollup": "^4.9.6",
     "typescript": "^5.3.3",
     "tslib": "^2.6.2"
-  }
+  },
+  "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac"
 }
