--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^12.0.0",
+    "@tauri-apps/cli": "^2.7.1",
     "rollup": "^4.9.6",
-    "typescript": "^5.3.3",
-    "tslib": "^2.6.2"
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.3"
   },
   "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac"
 }
