--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "pretest": "pnpm build"
   },
   "dependencies": {
-    "@tauri-apps/api": ">=2.0.0-beta.6"
+    "@tauri-apps/api": "^2.8.0"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^12.0.0",
-    "@tauri-apps/cli": "^2.7.1",
+    "@tauri-apps/cli": "^2.8.3",
     "rollup": "^4.9.6",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
